# ShadyLauncher

./: .gitignore  BUILD.md  CMakeLists.txt  README.md
.github/: FUNDING.yml
cmake/: MacOSXBundleInfo.plist.in
flatpak/: org.shadylauncher.ShadyLauncher.yml  shadylauncher.sh
launcher/: Application.cpp  CMakeLists.txt  main.cpp
launcher/minecraft/: PackProfile.cpp  PackProfile.h
launcher/minecraft/auth/steps/: MSAStep.cpp
launcher/modplatform/flame/: FlameAPI.cpp
launcher/modplatform/modrinth/: ModrinthAPI.cpp
launcher/ui/: MainWindow.cpp  MainWindow.h
launcher/ui/dialogs/: BlockedModsDialog.cpp
launcher/ui/pages/global/: AccountListPage.cpp  LauncherPage.cpp
launcher/ui/pages/instance/: VersionPage.cpp  VersionPage.h
program_info/: CMakeLists.txt  README.md  genicons.sh  org.shadylauncher.ShadyLauncher.desktop.in  org.shadylauncher.ShadyLauncher.metainfo.xml.in  shadylauncher.6.scd  shadylauncher.manifest.in  shadylauncher.qrc  shadylauncher.rc.in
snap/: snapcraft.yaml
